# penrose-analytics-tracker

./: CHANGELOG.md  DATA_COLLECTION.md  LICENSE  README.md  jest.config.js  pack.js  package-lock.json  package.json  tsconfig.json
api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.docker.yaml  config.example.yaml  docker-compose.yml
api/src/: lib.rs  logging.rs  main.rs
api/src/config/: mod.rs  tests.rs
api/src/enrichment/: geoip.rs  mod.rs  user_agent.rs
api/src/handlers/: mod.rs  tests.rs
api/src/streaming/: mod.rs  tests.rs
api/src/transformer/: mod.rs  tests.rs
api/tests/: e2e_complete_flow_test.rs  initialization_test.rs  kafka_integration_test.rs  logging_integration_test.rs  router_test.rs
examples/: README.md  basic-usage.ts  browser-example.html  build-browser.js  cdn-example.html  demo-server.js  nodejs-example.js  package.json
src/: APIClient.ts  AutoTracker.ts  CookieManager.ts  EventQueue.ts  PageStateManager.ts  Tracker.ts  index.ts  types.ts
tests/: APIClient.test.ts  AutoTracker.test.ts  CookieManager.test.ts  EventQueue.test.ts  PageStateManager.test.ts  Tracker.test.ts  integration.test.ts  setup.test.ts  types.test.ts
